# root-14-core

./: .gitignore  Cargo.toml  README.md  r14-indexer.db
crates/r14-circuit/: Cargo.toml  README.md
crates/r14-circuit/src/: lib.rs  merkle_gadget.rs  poseidon_gadget.rs  transfer.rs
crates/r14-circuits/: Cargo.toml
crates/r14-circuits/src/: lib.rs  membership.rs  ownership.rs  preimage.rs  range.rs
crates/r14-cli/: Cargo.toml
crates/r14-cli/src/: main.rs  merkle.rs  output.rs  soroban.rs  wallet.rs
crates/r14-cli/src/commands/: balance.rs  config.rs  deposit.rs  init_contract.rs  keygen.rs  mod.rs  status.rs  transfer.rs
crates/r14-core/: Cargo.toml
crates/r14-core/src/: contract.rs  lib.rs  types.rs  verifier.rs
crates/r14-core/test_snapshots/: get_vk_returns_stored.1.json  is_registered_true_false.1.json  non_admin_register_panics.1.json  register_and_verify.1.json  unregistered_circuit_panics.1.json
crates/r14-core/tests/: core_contract.rs  proof_generator.rs
crates/r14-indexer/: Cargo.toml
crates/r14-indexer/src/: api.rs  db.rs  lib.rs  main.rs  rpc.rs  tree.rs
crates/r14-indexer/tests/: e2e.rs
crates/r14-kernel/: Cargo.toml  README.md
crates/r14-kernel/src/: contract.rs  lib.rs  test_vectors.rs  test_vectors_bytes.rs  types.rs  verifier.rs
crates/r14-kernel/test_snapshots/: test_double_spend_rejected.1.json  test_invalid_proof_rejected.1.json  test_transfer_e2e.1.json
crates/r14-kernel/tests/: proof_generator.rs  transfer_e2e.rs
crates/r14-poseidon/: Cargo.toml  README.md
crates/r14-poseidon/src/: lib.rs
crates/r14-sdk/: Cargo.toml
crates/r14-sdk/src/: client.rs  error.rs  lib.rs  merkle.rs  prove.rs  serialize.rs  soroban.rs  wallet.rs
crates/r14-sdk/tests/: integration.rs
crates/r14-transfer/: Cargo.toml
crates/r14-transfer/src/: contract.rs  lib.rs
crates/r14-transfer/test_snapshots/: test_double_spend_rejected.1.json  test_transfer_e2e.1.json  test_zero_commitment_rejected.1.json
crates/r14-transfer/tests/: transfer_e2e.rs
crates/r14-types/: Cargo.toml  README.md
crates/r14-types/src/: keys.rs  lib.rs  merkle.rs  note.rs  nullifier.rs
docs/: sdk-cli-plan.md  sdk.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/api/: merkle.md  prove.md  root.md  serialize.md  soroban.md  wallet.md
docs/book/src/getting-started/: architecture.md  concepts.md  setup.md
docs/book/src/guide/: balance.md  deposits.md  keygen.md  offline-merkle.md  transfers.md
docs/book/src/reference/: hex.md  prerequisites.md
scripts/: deploy_phase0.sh
