[package]
name = "r14-circuits"
description = "Pre-built ZK circuits for Root14 (preimage, ownership, membership, range)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
r14-types = { workspace = true, features = ["std"] }
r14-poseidon = { workspace = true }
r14-circuit = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-snark = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
