[package]
name = "r14-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "r14"
path = "src/main.rs"

[dependencies]
r14-types = { workspace = true, features = ["std"] }
r14-poseidon = { workspace = true }
r14-circuit = { path = "../r14-circuit" }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
