[package]
name = "r14-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "r14"
path = "src/main.rs"

[dependencies]
r14-sdk = { workspace = true }
r14-circuit = { path = "../r14-circuit" }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
ark-ff = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
ark-groth16 = { workspace = true }
anyhow = { workspace = true }
colored = "3"
indicatif = "0.17"
