[package]
name = "r14-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
r14-types = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-groth16 = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-snark = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
r14-circuit = { workspace = true }
r14-poseidon = { workspace = true }
r14-sdk = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]
