[package]
name = "r14-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "r14-indexer"
path = "src/main.rs"

[dependencies]
r14-types = { workspace = true, features = ["std"] }
r14-poseidon = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
