[package]
name = "r14-indexer"
description = "Event indexer and Merkle tree service for Root14"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "r14_indexer"
path = "src/lib.rs"

[[bin]]
name = "r14-indexer"
path = "src/main.rs"

[dependencies]
r14-types = { workspace = true, features = ["std"] }
r14-poseidon = { workspace = true }
ark-ff = { workspace = true }
ark-bls12-381 = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
stellar-xdr = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
ark-std = { workspace = true }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
