[package]
name = "r14-types"
description = "Shared types for the Root14 privacy protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
std = []

[dependencies]
ark-ff = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
